# sekiva

./: Cargo.toml  LICENSE  README.md  SUBMISSION_TEMPLATE.md  deploy-ballot.sh
ballot/: Cargo.toml  README.md
ballot/src/: contract.rs  zk_compute.rs
collective/: Cargo.toml  README.md
collective/src/: lib.rs
docs/architecture/: overview.md
docs/deployment/: factory.md
docs/development/: contributing.md
docs/getting-started/: account-setup.md  environment.md  quick-start.md
docs/reference/: api.md
event-ballot/: Cargo.toml
event-ballot/src/: contract.rs
factory/: Cargo.toml
factory/src/: lib.rs
organization/: Cargo.toml
organization/src/: lib.rs
sekiva/: Cargo.toml  README.md  bun.lockb  package.json
sekiva-factory/: Cargo.toml  README.md
sekiva-factory/src/: contract_bytes.rs  lib.rs
sekiva-fe/: bun.lockb  components.json  package.json  vite.config.ts
sekiva-fe/app/: AppState.ts  root.tsx  routes.ts
sekiva-fe/app/abi/: BallotContract.ts  OrganizationContract.ts  SekivaFactoryContract.ts
sekiva-fe/app/components/ui/: button.tsx
sekiva-fe/app/organizations/: Home.tsx  New.tsx
sekiva-fe/app/partisia-client/: CryptoUtils.ts  PbcClient.ts  ShardedClient.ts  TransactionApi.ts
sekiva-fe/app/routes/: home.tsx
sekiva-fe/app/routes/organizations/: index.tsx  new.tsx
sekiva-fe/app/services/: WalletIntegration.ts  WalletService.ts
sekiva-fe/app/shared/: ConnectedWallet.ts  MetaMaskSignatureProvider.ts  MpcWalletSignatureProvider.ts  PrivateKeySignatureProvider.ts
sekiva-fe/app/welcome/: welcome.tsx
sekiva-fe/services/: WalletService.ts
sekiva-frontend/: Dockerfile  README.md  bun.lockb  components.json  eslint.config.js  fly.toml  index.html  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
sekiva-frontend/src/: App.tsx  AppState.ts  Home.tsx  Main.ts  WalletIntegration.ts  index.css  main.tsx  partisia-config.ts  polyfills.ts
sekiva-frontend/src/abi/: Organization.ts
sekiva-frontend/src/auth/: AuthContext.ts  AuthProvider.tsx  SessionManager.ts  useAuth.ts
sekiva-frontend/src/ballot/: BallotCard.tsx  BallotPage.tsx  BallotsTab.tsx  NewBallot.tsx
sekiva-frontend/src/client/: ContractUtils.ts  CryptoUtils.ts  PbcClient.ts  ShardedClient.ts
sekiva-frontend/src/collective/: AboutTab.tsx  BallotsTab.tsx  CollectiveCard.tsx  CollectiveDetails.tsx  MembersTab.tsx  MyCollectives.tsx  NewCollective.tsx  NewCollectiveForm.tsx  useCollectives.ts
sekiva-frontend/src/collective/new/: CollectivePreview.tsx  DetailsFields.tsx  FormOptions.ts  FormSteps.tsx  MembersFields.tsx  NewCollectivePage.tsx  PrefixedTextField.tsx  TextField.tsx  types.ts  useCollectiveForm.tsx
sekiva-frontend/src/components/shared/: ConnectButton.tsx  FieldInfo.tsx  NavBar.tsx  TransactionDialog.tsx  TransactionTest.tsx  WelcomeDialog.tsx
sekiva-frontend/src/contracts/: BallotGenerated.ts  OrganizationGenerated.ts  SekivaFactoryGenerated.ts
sekiva-frontend/src/contracts/ballot/: BallotGenerated.ts  NewBallot.tsx  ballotApi.ts  generated.ts
sekiva-frontend/src/contracts/factory/: SekivaFactoryGenerated.ts  api.ts  client.ts  generated.ts
sekiva-frontend/src/hooks/: useBallotContract.ts  useBallotVote.ts  useBallots.ts  useFactoryContract.ts  useFactoryCreateOrg.ts  useOrganizationBallots.ts  useOrganizationContract.ts  useOrganizations.ts  useSetBallotActive.ts  useTransaction.ts  useTransactionStatus.ts  useUserOrgs.ts
sekiva-frontend/src/lib/: ballot.ts  ballotUtils.ts  factory.ts  organization.ts
sekiva-frontend/src/organizations/: MyOrganizations.tsx  NewOrganization.tsx  OrganizationDetail.tsx
sekiva-frontend/src/shared/: MpcWalletSignatureProvider.ts  PrivateKeySignatureProvider.ts
sekiva-frontend/src/types/: contract.ts
sekiva/src/: App.tsx  index.css  lib.rs
sekiva/src/config/: BlockchainConfig.ts
(+2 files in other folders)
