[workspace]
resolver = "2"

members = [
    # "petition",
    # "zk-average-salary",
		"ballot",
		"sekiva-factory",
		"organization",
		"event-ballot",
		"factory",
		"collective"
]

# [workspace.package]
# version = "5.292.0"
# description = "Example contract for the Partisia Blockchain."
# homepage = "https://gitlab.com/partisiablockchain/language/example-contracts"
# repository = "https://gitlab.com/partisiablockchain/language/example-contracts"
# documentation = "https://gitlab.com/partisiablockchain/language/example-contracts"
# edition = "2021"
# license = "MIT"

# [workspace.metadata.partisiablockchain]
# cargo-partisia = "5.204.0"

# [workspace.metadata.zkcompiler]
# url = "https://gitlab.com/api/v4/groups/12499775/-/packages/maven/com/partisiablockchain/language/zkcompiler/5.83.0/zkcompiler-5.83.0-jar-with-dependencies.jar"

# [workspace.metadata.abi-cli]
# url = "https://gitlab.com/api/v4/groups/12499775/-/packages/maven/com/partisiablockchain/language/abi-cli/5.190.0/abi-cli-5.190.0-jar-with-dependencies.jar"

# [workspace.dependencies]
# pbc_contract_common = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.94.0" }
# pbc_contract_codegen = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.94.0" }
# pbc_traits = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.94.0" }
# pbc_lib = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.94.0" }
# read_write_rpc_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.94.0" }
# read_write_state_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.94.0" }
# create_type_spec_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.94.0" }
# pbc_zk = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.94.0" }

[workspace.package]
version = "4.0.0"
description = "Sekiva contracts"
homepage = "https://gitlab.com/secata/pbc/language/web-ide"
repository = "https://gitlab.com/secata/pbc/language/web-ide"
documentation = "https://gitlab.com/secata/pbc/language/web-ide"
edition = "2021"
license = "UNLICENSED"

[workspace.metadata.partisiablockchain]
cargo-partisia = "5.204.0"

[workspace.metadata.zkcompiler]
url = "https://gitlab.com/api/v4/groups/12499775/-/packages/maven/com/partisiablockchain/language/zkcompiler/5.46.0/zkcompiler-5.46.0-jar-with-dependencies.jar"

[workspace.metadata.abi-cli]
url = "https://gitlab.com/api/v4/groups/12499775/-/packages/maven/com/partisiablockchain/language/abi-cli/5.102.0/abi-cli-5.102.0-jar-with-dependencies.jar"

[workspace.dependencies]
pbc_contract_common = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
pbc_contract_codegen = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
pbc_traits = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
pbc_lib = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
read_write_rpc_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
read_write_state_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
create_type_spec_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
pbc_zk = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.90.0" }
